Add modal window

--- a/src/pug/includes/hero.pug
+++ b/src/pug/includes/hero.pug
@@ -47,10 +47,10 @@ section.hero
           .group
             dt Карбон
             dd Материал
-  ol.buttons
+  ol.hero-buttons
     li
-      button.states-default.active#button-1(type="button" aria-label="Фото 1.")
+      button.slide-button.states-default.slide-button-active#button-1(type="button" aria-label="Фото 1.")
     li
-      button.states-default#button-2(type="button" aria-label="Фото 2.")
+      button.slide-button.states-default#button-2(type="button" aria-label="Фото 2.")
     li
-      button.states-default#button-3(type="button" aria-label="Фото 3.")
+      button.slide-button.states-default#button-3(type="button" aria-label="Фото 3.")
