--- a/src/pug/includes/page-footer.pug
+++ b/src/pug/includes/page-footer.pug
@@ -6,22 +6,22 @@ footer.page-footer
     p.address Санкт-Петербург, набережная реки Карповки, 5, литера П.
     ul.footer-navigation-list
       li.heading-2
-        a.shipping(href="#no_scroll") Доставка
+        a.shipping(href="#modal") Доставка
       li.heading-2
         a(href="#no_scroll") Гарантия
       li.heading-2
         a(href="#no_scroll") Контакты
     p.telephone
-      a(href="tel:+78128121212") Тел.: +7 (812) 812-12-12
+      a.telephone-link(href="tel:+78128121212") Тел.: +7 (812) 812-12-12
     ul.contacts-list
       li
-        a.place-center(href="https://t.me/htmlacademy" aria-label="Telegram.")
+        a.contacts-list-link.place-center(href="https://t.me/htmlacademy" aria-label="Telegram.")
           span.telegram
       li
-        a.place-center(href="https://www.youtube.com/user/htmlacademyru" aria-label="Youtube.")
+        a.contacts-list-link.place-center(href="https://www.youtube.com/user/htmlacademyru" aria-label="Youtube.")
           span.youtube
       li
-        a.place-center(href="https://twitter.com/htmlacademy_ru" aria-label="Twitter.")
+        a.contacts-list-link.place-center(href="https://twitter.com/htmlacademy_ru" aria-label="Twitter.")
           span.twitter
     a.logo-academy-link(href="https://htmlacademy.ru" aria-label="HTML Academy.")
       <svg width="115" height="33" fill="currentColor">
