--- a/src/pug/includes/page-header.pug
+++ b/src/pug/includes/page-header.pug
@@ -71,7 +71,7 @@ header.page-header
             li
               a.states-default(href="#no_scroll") Квадрокоптеры
       li.heading-2
-        a.heading-2.states-default.list-item(href="#no_scroll") Доставка
+        a.heading-2.states-default.list-item(href="#modal") Доставка
       li.heading-2
         a.heading-2.states-default.list-item(href="#no_scroll") Гарантия
       li.heading-2
