--- a/src/pug/pages/catalog-monopods.pug
+++ b/src/pug/pages/catalog-monopods.pug
@@ -11,3 +11,4 @@ html(lang="ru")
       include ../includes/monopods.pug
 
     include ../includes/page-footer.pug
+    include ../includes/modal.pug
