--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -16,3 +16,4 @@ html(lang="ru")
       include ../includes/newsletter.pug
 
     include ../includes/page-footer.pug
+    include ../includes/modal.pug
