--- a/src/scss/components/_monopods.scss
+++ b/src/scss/components/_monopods.scss
@@ -1,7 +1,8 @@
 .monopods-header {
   width: 1160px;
-  padding: 35px 60px 35px;
   margin: 0 auto;
+  padding: 35px 60px;
+
   color: $black;
 
   h1 {
@@ -13,12 +14,15 @@
   display: flex;
   flex-wrap: wrap;
   gap: 20px 36px;
-  padding: 0;
+
   margin: 0 0 0 1px;
+  padding: 0;
+
   list-style: none;
 
   li {
     position: relative;
+
     font-size: 16px;
     line-height: 20px;
   }
@@ -28,37 +32,42 @@
     position: absolute;
     top: 50%;
     left: -18px;
-    height: 7px;
+
     width: 4px;
-    background-image: url(../img/icons/breadcrumbs-separator.svg);
-    background-repeat: no-repeat;
+    height: 7px;
+
+    background-image: url("../img/icons/breadcrumbs-separator.svg");
     background-position: center;
+    background-repeat: no-repeat;
+
     transform: translateY(-50%);
   }
 
   a {
+    color: inherit;
+
     font-size: 16px;
     line-height: 20px;
-    color: inherit;
     text-decoration: none;
   }
 }
 
 .monopods-catalog {
-  color: $black;
   background-color: $light;
+  color: $black;
 }
 
 .monopods-container {
   display: flex;
+
   width: 1160px;
   margin: 0 auto;
 
   h2 {
-    font-family: Raleway;
-    font-style: normal;
     font-weight: 800;
+    font-style: normal;
     font-size: 16px;
+    font-family: Raleway, sans-serif;
     line-height: 19px;
     letter-spacing: 0.2em;
     text-transform: uppercase;
@@ -71,28 +80,32 @@
 
   fieldset {
     position: relative;
+
     width: 200px;
-    border: none;
     padding: 0;
+    border: none;
 
     &::before {
+      content: '';
       position: absolute;
       top: -54px;
       left: 0;
-      content: '';
+
       width: 200px;
       height: 2px;
+
       background-color: $black;
     }
   }
 
   legend {
+    margin: 0 0 20px;
+    padding: 0;
+
     font-weight: 700;
     font-size: 18px;
     line-height: 20px;
     letter-spacing: -0.02em;
-    margin: 0 0 20px;
-    padding: 0;
   }
 }
 
@@ -101,40 +114,46 @@
 }
 
 .range {
-  margin: 0 0 50px 0;
+  margin: 0 0 50px;
 }
 
 .range-scale {
   position: relative;
+
   width: 209px;
   height: 2px;
-  background-color: $gray;
   margin: 8px 0 12px -9px;
 
-  button {
-    position: absolute;
-    top: -8px;
-    z-index: 2;
-    width: 18px;
-    height: 18px;
-    font-family: inherit;
-    background-color: $light-gray;
-    border: 2px solid $black;
-    border-radius: 50%;
-    cursor: pointer;
+  background-color: $gray;
+}
 
-    &:hover {
-      border-color: rgba(0, 0, 0, 0.5);
-    }
+.range-scale-button {
+  position: absolute;
+  top: -8px;
+  z-index: 20;
 
-    &:focus {
-      @include focus-default;
-    }
+  width: 18px;
+  height: 18px;
+  border: 2px solid $black;
+  border-radius: 50%;
 
-    &:active {
-      outline: none;
-      background-color: $black;
-    }
+  background-color: $light-gray;
+
+  font-family: inherit;
+
+  cursor: pointer;
+
+  &:hover {
+    border-color: rgb(0 0 0 / 50%);
+  }
+
+  &:focus {
+    @include focus-default;
+  }
+
+  &:active {
+    background-color: $black;
+    outline: none;
   }
 }
 
@@ -149,8 +168,10 @@
 .range-selected {
   position: absolute;
   top: 0;
-  z-index: 1;
+  z-index: 10;
+
   height: 2px;
+
   background-color: $black;
 }
 
@@ -164,29 +185,35 @@
   span {
     position: absolute;
     top: 50%;
+
     font-size: 14px;
     line-height: 18px;
+
     opacity: 0.3;
+
     transform: translateY(-50%);
   }
 
   input {
     display: block;
+
     width: 55px;
     padding: 0 0 0 19px;
-    font-family: inherit;
-    font-size: 14px;
-    line-height: 18px;
-    color: inherit;
-    opacity: 0.3;
     border: none;
+
     background-color: transparent;
-    -webkit-appearance: textfield;
+    color: inherit;
+
+    font-size: 14px;
+    font-family: inherit;
+    line-height: 18px;
+
+    opacity: 0.3;
+
     appearance: textfield;
 
     &::-webkit-outer-spin-button,
     &::-webkit-inner-spin-button {
-      -webkit-appearance: none;
       appearance: none;
     }
 
@@ -201,12 +228,13 @@
 }
 
 .colors {
-  margin: 0 0 47px 0;
+  margin: 0 0 47px;
 
 
   ul {
-    padding: 0;
     margin: 0;
+    padding: 0;
+
     list-style: none;
   }
 
@@ -221,8 +249,10 @@
 
   label {
     display: flex;
+
     font-size: 16px;
     line-height: 20px;
+
     cursor: pointer;
   }
 
@@ -230,44 +260,40 @@
     width: 20px;
     height: 20px;
     margin: 0 16px 0 0;
-    background-color: transparent;
     border: 2px solid $black;
     border-radius: 3px;
-    -webkit-appearance: none;
-    appearance: none;
+
+    background-color: transparent;
+
     cursor: pointer;
+
+    appearance: none;
   }
 
   input[type="checkbox"]:checked {
-    background-image: url(../img/icons/tick-checkbox.svg);
-    background-repeat: no-repeat;
-    background-size: 10px;
+    background-image: url("../img/icons/tick-checkbox.svg");
     background-position: center;
+    background-size: 10px;
+    background-repeat: no-repeat;
   }
 }
 
 .bluetooth {
-  margin: 0 0 35px 0;
+  margin: 0 0 35px;
 
   ul {
-    padding: 0;
     margin: 0;
+    padding: 0;
+
     list-style: none;
-  }
-
-  li {
-    font-size: 16px;
-    line-height: 20px;
-  }
-
-  li:not(:last-child) {
-    margin-bottom: 20px;
   }
 
   label {
     display: flex;
+
     font-size: 16px;
     line-height: 20px;
+
     cursor: pointer;
   }
 
@@ -275,20 +301,31 @@
     width: 20px;
     height: 20px;
     margin: 0 16px 0 0;
-    background-color: transparent;
     border: 2px solid $black;
     border-radius: 50%;
-    -webkit-appearance: none;
-    appearance: none;
+
+    background-color: transparent;
+
     cursor: pointer;
+
+    appearance: none;
   }
 
   input[type="radio"]:checked {
-    background-image: url(../img/icons/tick-radio.svg);
-    background-repeat: no-repeat;
-    background-size: 8px;
+    background-image: url("../img/icons/tick-radio.svg");
     background-position: center;
+    background-size: 8px;
+    background-repeat: no-repeat;
   }
+}
+
+.bluetooth-item {
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.bluetooth-item:not(:last-child) {
+  margin-bottom: 20px;
 }
 
 .button-filter {
@@ -301,8 +338,9 @@
 
 .sort {
   display: flex;
-  align-items: center;
   justify-content: space-between;
+  align-items: center;
+
   padding: 20px 40px;
 
   h2 {
@@ -310,18 +348,20 @@
   }
 
   select {
-    padding: 0 32px 0 0;
-    margin: 0;
     width: 141px;
-    font-family: inherit;
-    font-size: 18px;
-    line-height: 30px;
-    background-color: transparent;
+    margin: 0;
+    padding: 0 32px 0 0;
     border: none;
-    background-image: url(../img/icons/select-arrow.svg);
-    background-repeat: no-repeat;
+
+    background-color: transparent;
+    background-image: url("../img/icons/select-arrow.svg");
     background-position: right 11px center;
-    -webkit-appearance: none;
+    background-repeat: no-repeat;
+
+    font-size: 18px;
+    font-family: inherit;
+    line-height: 30px;
+
     appearance: none;
   }
 }
@@ -330,17 +370,19 @@
   display: flex;
 
   button {
-    height: 30px;
     width: 30px;
-    background-color: transparent;
-    user-select: none;
-    border: none;
+    height: 30px;
     padding: 0;
-    background-image: url(../img/icons/button-sort.svg);
-    background-repeat: no-repeat;
+    border: none;
+
+    background-color: transparent;
+    background-image: url("../img/icons/button-sort.svg");
     background-position: center;
+    background-repeat: no-repeat;
+
     opacity: 0.2;
     cursor: pointer;
+    user-select: none;
 
     &:hover {
       opacity: 0.5;
@@ -352,6 +394,7 @@
 
     &:active {
       outline: none;
+
       opacity: 1;
     }
 
@@ -361,6 +404,7 @@
 
       &:hover {
         outline: none;
+
         opacity: 0.1;
       }
 
@@ -377,6 +421,7 @@
 
 .goods {
   padding: 70px 40px 78px;
+
   background-color: $white;
 }
 
@@ -384,18 +429,22 @@
   display: grid;
   grid-template-columns: repeat(2, 360px);
   gap: 44px 40px;
-  padding: 0;
+
   margin: 0 0 44px;
+  padding: 0;
+
   list-style: none;
 
   img {
-    grid-column: 1 / -1;
     display: block;
+    grid-column: 1 / -1;
+
     margin-bottom: 32px;
   }
 
   h3 {
     margin: 0;
+
     font-weight: 700;
     font-size: 18px;
     line-height: 20px;
@@ -408,14 +457,56 @@
   &::before {
     content: '';
     position: absolute;
-    z-index: 10;
     top: 27px;
     right: 27px;
+    z-index: 10;
+
     width: 60px;
     height: 60px;
-    background-image: url(../img/icons/new.svg);
-    background-repeat: no-repeat;
+
+    background-image: url("../img/icons/new.svg");
     background-position: center;
+    background-repeat: no-repeat;
+  }
+}
+
+.goods-price {
+  justify-self: end;
+
+  color: $dark;
+
+  font-size: 18px;
+  line-height: 21px;
+}
+
+.goods-detailed {
+  position: absolute;
+  top: 180px;
+  left: 75px;
+  z-index: 30;
+  display: none;
+
+  width: 220px;
+
+  color: $black;
+
+  text-align: center;
+
+  user-select: none;
+
+  &::before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 0;
+    z-index: -10;
+
+    width: 100%;
+    height: 8px;
+
+    background-color: $yellow-light;
+
+    transform: translateY(-50%);
   }
 }
 
@@ -423,19 +514,23 @@
   position: relative;
   display: grid;
   grid-template-columns: 226px 1fr;
+
   color: inherit;
+
   text-decoration: none;
 
   &:hover {
     &::before {
       content: '';
-      z-index: 20;
       position: absolute;
       top: 0;
       left: 0;
+      z-index: 20;
+
       width: 360px;
       height: 380px;
-      background-color: rgba(240, 240, 240, 0.8);
+
+      background-color: rgb(240 240 240 / 80%);
     }
 
     h3 {
@@ -456,13 +551,15 @@
 
     &::before {
       content: '';
-      z-index: 20;
       position: absolute;
       top: 0;
       left: 0;
+      z-index: 20;
+
       width: 360px;
       height: 380px;
-      background-color: rgba(240, 240, 240, 0.8);
+
+      background-color: rgb(240 240 240 / 80%);
     }
 
     h3 {
@@ -483,51 +580,23 @@
   }
 }
 
-.goods-price {
-  justify-self: end;
-  color: $dark;
-  font-size: 18px;
-  line-height: 21px;
-}
-
-.goods-detailed {
-  display: none;
-  position: absolute;
-  top: 180px;
-  left: 75px;
-  z-index: 30;
-  width: 220px;
-  color: $black;
-  text-align: center;
-  user-select: none;
-
-  &::before {
-    position: absolute;
-    z-index: -10;
-    top: 50%;
-    left: 0;
-    content: '';
-    width: 100%;
-    height: 8px;
-    background-color: $yellow-light;
-    transform: translateY(-50%);
-  }
-}
-
 .button-more {
   width: 100%;
+  margin-bottom: 44px;
   padding: 15px;
-  font-family: Raleway;
+  border: 3px solid $mercury;
+
+  background-color: transparent;
+
   font-weight: 800;
   font-size: 16px;
+  font-family: Raleway, sans-serif;
   line-height: 19px;
   letter-spacing: 0.2em;
   text-transform: uppercase;
-  background-color: transparent;
-  border: 3px solid $mercury;
-  user-select: none;
-  margin-bottom: 44px;
+
   cursor: pointer;
+  user-select: none;
 
   &:hover {
     border-color: $black;
@@ -538,8 +607,10 @@
   }
 
   &:active {
-    outline: none;
     border-color: $black;
+
+    outline: none;
+
     opacity: 0.3;
   }
 
@@ -549,6 +620,7 @@
 
     &:hover {
       outline: none;
+
       opacity: 0.1;
     }
 
@@ -558,6 +630,7 @@
 
     &:active {
       outline: none;
+
       opacity: 0.1;
     }
   }
@@ -566,69 +639,71 @@
 .pagination {
   display: flex;
   justify-content: space-between;
-  background-color: $light-gray;
 
-  button {
-    @include button-default;
-    padding: 25px;
-    color: $dark;
+  background-color: $light-gray;
+}
+
+.pagination-button {
+  @include button-default;
+
+  padding: 25px;
+
+  color: $dark;
+
+  &:hover {
+    background-color: $gray;
+  }
+
+  &:focus {
+    @include focus-default;
+  }
+
+  &:active {
+    background-color: $gray;
+    outline: none;
+
+    span {
+      opacity: 0.3;
+    }
+  }
+
+  &:disabled {
+    span {
+      opacity: 0.3;
+    }
 
     &:hover {
-      background-color: $gray;
+      background-color: transparent;
+      outline: none;
     }
 
     &:focus {
-      @include focus-default;
-    }
-
-    &:active {
       outline: none;
-      background-color: $gray;
-
-      span {
-        opacity: 0.3;
-      }
-    }
-
-    &:disabled {
-
-      span {
-        opacity: 0.3;
-      }
-
-      &:hover {
-        outline: none;
-        background-color: transparent;
-      }
-
-      &:focus {
-        outline: none;
-      }
     }
   }
 }
 
 .pagination-list {
-  align-self: center;
   display: flex;
   flex-wrap: wrap;
-  padding: 0;
-  margin: 0 40px;
-  list-style: none;
+  align-self: center;
 
-  li {
-    font-size: 16px;
-    line-height: 20px;
-  }
+  margin: 0 40px;
+  padding: 0;
+
+  list-style: none;
 
   a {
     width: 40px;
     height: 40px;
+
+    color: $dark;
+
     font-size: 16px;
     line-height: 20px;
-    color: $dark;
-    opacity: 0.3;
     text-decoration: none;
+
+    opacity: 0.3;
 
     &:hover {
       opacity: 1;
@@ -640,8 +715,14 @@
 
     &:active {
       outline: none;
+
       opacity: 0.1;
     }
+  }
+
+  .pagination-item {
+    font-size: 16px;
+    line-height: 20px;
   }
 
   .page-active {
@@ -657,6 +738,7 @@
 
     &:active {
       outline: none;
+
       opacity: 0.6;
     }
   }
