--- a/src/scss/general/_variables.scss
+++ b/src/scss/general/_variables.scss
@@ -1,21 +1,21 @@
 // Colors
-$black: #000000;
-$dark: #444444;
+$black: #000;
+$dark: #444;
 $nero: #1a1a1a;
 $weathered-stone: #c4c4c4;
 $gray: #dcdcdc;
 $light-gray: #ebebeb;
 $light: #f0f0f0;
 $mercury: #e5e5e5;
-$white: #ffffff;
+$white: #fff;
 $yellow: #ffe17f;
 $yellow-dark: #ffc700;
 $yellow-light: #ffe17f;
-$sunglow: #ffcc33;
+$sunglow: #fc3;
 $purple: #af4fff;
 $error: #ff3d3d;
 $alert: #fd912e;
 $success: #08af00;
 
-//Categories
+// Categories
 $categories: vr-glasses, monopods, cameras, bracelets, watches, drones;
