--- a/src/pug/includes/features.pug
+++ b/src/pug/includes/features.pug
@@ -10,16 +10,16 @@ section.features
         li
           button.button-streak(type="button" aria-label="Кредит." data-item="credit") #[span Кредит]
       ul.features-description
-        li.delivery#delivery
+        li.features-description-item.delivery#delivery
           h3.heading-1 Доставка
           p Мы с удовольствием доставим ваш товар прямо к&nbsp;вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.
-        li.closed.warranty#warranty
+        li.features-description-item.closed.warranty#warranty
           h3.heading-1 Гарантия
           p Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте, мы выдадим вам новый. Товар, не дом, конечно же.
-        li.closed.credit#credit
+        li.features-description-item.closed.credit#credit
           h3.heading-1 Кредит
           p Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для банка, разумеется.
-  a.rare-goods(href="#no_scroll")
+  a.rare-goods(href="#modal")
     p Доставим редкий товар под заказ
     .tooltip.place-center
       <svg width="2" height="12" fill="currentColor"><g clip-path="url(#a)"><path d="M2 0H0v2h2V0ZM2 4H0v8h2V4Z"/></g><defs><clipPath id="a"><path d="M0 0h2v12H0z"/></clipPath></defs></svg>
