--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -2,20 +2,25 @@
   position: relative;
   display: grid;
   grid-template-columns: repeat(2, 560px);
-  column-gap: 40px;
+
   width: 1160px;
   margin: -35px auto 70px;
+
   background: linear-gradient($yellow, $yellow) no-repeat left -410px;
 
+  column-gap: 40px;
+
   .heading-1 {
-    color: $black;
     margin: 121px 0 29px;
+
+    color: $black;
   }
 }
 
 .products {
-  padding: 0;
   margin: 0;
+  padding: 0;
+
   list-style-type: none;
 
   img {
@@ -28,11 +33,14 @@
 
   button {
     @include button-default;
+
     position: absolute;
+
     width: 20px;
     height: 60px;
-    background-image: url(../img/icons/arrow.svg);
     margin-bottom: 50px;
+
+    background-image: url("../img/icons/arrow.svg");
 
     &:disabled {
       opacity: 0.1;
@@ -43,6 +51,7 @@
 .button-next {
   top: 211px;
   right: 0;
+
   transform: rotate(180deg);
 }
 
@@ -53,20 +62,24 @@
 
 .articles {
   position: relative;
-  padding: 0;
+
   margin: 0;
+  padding: 0;
+
   list-style-type: none;
 
   li::before {
+    content: attr(data-count);
     position: absolute;
-    z-index: 10;
     top: 80px;
     right: 49px;
-    content: attr(data-count);
+    z-index: 10;
+
+    color: $white;
+
     font-weight: 700;
     font-size: 180px;
     line-height: 30px;
-    color: $white;
   }
 
   article {
@@ -86,16 +99,19 @@
   }
 
   dt {
+    margin-bottom: 12px;
+
+    color: $black;
+
     font-size: 36px;
     line-height: 30px;
-    color: $black;
-    margin-bottom: 12px;
   }
 
   dd {
+    margin: 0;
+
     font-size: 16px;
     line-height: 30px;
-    margin: 0;
   }
 }
 
@@ -109,29 +125,34 @@
   margin: 0 0 50px;
 }
 
-.buttons {
+.hero-buttons {
   position: absolute;
   bottom: 0;
   left: 50%;
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
-  padding: 0;
+
   margin: 0;
+  padding: 0;
+
   list-style-type: none;
+
   transform: translateX(-50%);
+}
 
-  button {
-    @include button-default;
-    height: 12px;
-    width: 12px;
-    padding: 0;
-    border-radius: 50%;
-    border: 2px solid $black;
-    user-select: none;
-  }
+.slide-button {
+  @include button-default;
 
-  .active {
-    background-color: $black;
-  }
+  width: 12px;
+  height: 12px;
+  padding: 0;
+  border: 2px solid $black;
+  border-radius: 50%;
+
+  user-select: none;
+}
+
+.slide-button-active {
+  background-color: $black;
 }
