--- a/src/scss/components/_newsletter.scss
+++ b/src/scss/components/_newsletter.scss
@@ -6,9 +6,10 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+
   width: 1160px;
-  padding: 64px 0 56px;
   margin: 0 auto;
+  padding: 64px 0 56px;
 }
 
 .newsletteter-heading {
@@ -21,27 +22,33 @@
   margin: 10px 0 0;
 }
 
-.email-form {
+.newsletteter-form {
   display: flex;
+
   width: 810px;
 }
 
-.email-input {
+.newsletteter-input {
   flex-grow: 1;
-  padding: 11px 17px 11px;
+
+  padding: 11px 17px;
   border: none;
   border-bottom: 3px solid $weathered-stone;
-  font-family: inherit;
-  font-size: 18px;
-  line-height: 30px;
-  color: $dark;
+
   background-color: transparent;
+  color: $dark;
+
+  font-size: 18px;
+  font-family: inherit;
+  line-height: 30px;
 
   &::placeholder {
-    font-family: inherit;
-    font-size: 18px;
-    line-height: 30px;
     color: $dark;
+
+    font-size: 18px;
+    font-family: inherit;
+    line-height: 30px;
+
     opacity: 0.5;
   }
 
@@ -58,16 +65,18 @@
   }
 }
 
-.email-button {
-  padding: 15px;
+.newsletteter-button {
   min-width: 253px;
-  font-family: Raleway;
+  padding: 15px;
+  border: 3px solid $weathered-stone;
+
   font-weight: 800;
   font-size: 18px;
+  font-family: Raleway, sans-serif;
   line-height: 21px;
   letter-spacing: 0.2em;
   text-transform: uppercase;
-  border: 3px solid $weathered-stone;
+
   user-select: none;
 }
 
@@ -79,10 +88,12 @@
   &::before {
     content: '';
     display: block;
-    height: 16px;
+
     width: 16px;
+    height: 16px;
     margin-right: 17px;
-    background-image: url(../img/icons/tick-success.svg);
+
+    background-image: url("../img/icons/tick-success.svg");
     background-repeat: no-repeat;
   }
 }
