--- a/src/scss/components/_page-header.scss
+++ b/src/scss/components/_page-header.scss
@@ -1,23 +1,27 @@
 .page-header {
   width: 1160px;
-  padding: 20px 60px 19px;
   margin: 0 auto;
+  padding: 20px 60px 19px;
+
   background: linear-gradient($yellow, $yellow) no-repeat left 40px;
 
   form {
     display: flex;
+
     margin-right: 26px;
   }
 
   ul {
-    padding: 0;
     margin: 0;
+    padding: 0;
+
     list-style: none;
   }
 }
 
 .header-navigation-site {
   display: flex;
+
   margin-bottom: 30px;
 }
 
@@ -32,35 +36,42 @@
 }
 
 .search-input {
-  padding: 8px 8px 8px 46px;
   width: 357px;
+  padding: 8px 8px 8px 46px;
   border: 2px solid $black;
   border-right: none;
-  border-radius: 50px 0px 0px 50px;
-  font-family: inherit;
-  font-size: 16px;
-  line-height: 20px;
-  color: $black;
+  border-radius: 50px 0 0 50px;
+
   background-color: transparent;
-  background-image: url(../img/icons/magnifier.svg);
-  background-repeat: no-repeat;
+  background-image: url("../img/icons/magnifier.svg");
   background-position: left 14px center;
+  background-repeat: no-repeat;
+  color: $black;
+
+  font-size: 16px;
+  font-family: inherit;
+  line-height: 20px;
 
   &::placeholder {
-    font-family: inherit;
-    font-size: 16px;
-    line-height: 20px;
     color: $black;
+
+    font-size: 16px;
+    font-family: inherit;
+    line-height: 20px;
+
     opacity: 0.3;
   }
 
   &::-webkit-search-cancel-button {
-    -webkit-appearance: none;
-    height: 10px;
     width: 10px;
+    height: 10px;
     margin-left: 14px;
+
     background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='10' height='10' viewBox='0 0 10 10' fill='%363636'><path d='M10 .9 9.1 0 5 4.1.9 0 0 .9 4.1 5 0 9.1l.9.9L5 5.9 9.1 10l.9-.9L5.9 5 10 .9Z'/></svg>");
+
     cursor: pointer;
+
+    appearance: none;
   }
 
   &:focus {
@@ -76,18 +87,21 @@
   width: 160px;
   padding: 8 14px;
   border: 2px solid $black;
-  border-radius: 0px 50px 50px 0px;
-  font-family: inherit;
+  border-radius: 0 50px 50px 0;
+
   font-size: 16px;
+  font-family: inherit;
   line-height: 20px;
+
   user-select: none;
 }
 
 .header-navigation-user {
   display: flex;
-  align-items: center;
   flex-wrap: wrap;
   gap: 20px 16px;
+  align-items: center;
+
   width: 497px;
 
   li {
@@ -97,6 +111,7 @@
 
   .user-link {
     color: $black;
+
     font-size: 18px;
     line-height: 30px;
   }
@@ -108,9 +123,10 @@
 
 .login-link {
   padding-left: 27px;
-  background-image: url(../img/icons/user.svg);
-  background-repeat: no-repeat;
+
+  background-image: url("../img/icons/user-black.svg");
   background-position: left 1px center;
+  background-repeat: no-repeat;
 }
 
 .logout-link {
@@ -123,9 +139,39 @@
 
 .compare-link {
   padding-left: 22px;
-  background-image: url(../img/icons/diagram.svg);
-  background-repeat: no-repeat;
+
+  background-image: url("../img/icons/diagram.svg");
   background-position: left center;
+  background-repeat: no-repeat;
+}
+
+.shopping-cart {
+  position: absolute;
+  top: calc(100% + 6px);
+  left: -125px;
+  z-index: 50;
+  display: none;
+
+  width: 320px;
+
+  background-color: $black;
+
+  opacity: 0;
+
+  transition: opacity 0.2s ease-out 0.4s;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 50%;
+
+    border-width: 0 7px 6px;
+    border-style: solid;
+    border-color: transparent transparent $black transparent;
+
+    transform: translate(-50%, -100%);
+  }
 }
 
 .cart {
@@ -134,19 +180,24 @@
 
 .cart-link {
   position: relative;
+
   padding-left: 45px;
-  background-image: url(../img/icons/shopping-cart.svg);
-  background-repeat: no-repeat;
+
+  background-image: url("../img/icons/shopping-cart.svg");
   background-position: 17px 6px;
+  background-repeat: no-repeat;
 
   span {
     position: absolute;
     top: 3.5px;
     left: 2px;
+
     width: 21px;
     height: 21px;
-    background-color: $white;
     border-radius: 50%;
+
+    background-color: $white;
+
     font-size: 14px;
     line-height: 17px;
   }
@@ -155,71 +206,55 @@
   &:focus+ {
     .shopping-cart {
       display: block;
+
       opacity: 1;
     }
   }
 
   &:hover::after,
   &:focus::after {
-    position: absolute;
     content: '';
+    position: absolute;
     top: 30px;
     left: -30px;
+
     width: 180px;
     height: 6px;
+
     background-color: transparent;
 
     &:hover+ {
       .shopping-cart {
         display: block;
+
         opacity: 1;
       }
     }
   }
 }
 
-.shopping-cart {
-  display: none;
-  position: absolute;
-  z-index: 50;
-  top: calc(100% + 6px);
-  left: -125px;
-  width: 320px;
-  background-color: $black;
-  opacity: 0;
-  transition: opacity 0.2s ease-out 0.4s;
-
-  &::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 50%;
-    border-style: solid;
-    border-color: transparent transparent $black transparent;
-    border-width: 0 7px 6px 7px;
-    transform: translate(-50%, -100%);
-  }
-}
-
 .cart-item {
   display: flex;
+
   padding: 20px;
 
   button {
-    margin-left: auto;
     width: 10px;
     height: 10px;
+    margin-left: auto;
     border: none;
+
     background-color: transparent;
-    background-image: url(../img/icons/button-closed.svg);
-    background-repeat: no-repeat;
+    background-image: url("../img/icons/button-close.svg");
     background-position: center;
+    background-repeat: no-repeat;
+
     user-select: none;
   }
 }
 
 .cart-item:not(:first-child) {
-  border-top: 1px solid rgba(255, 255, 255, 0.1);
+  border-top: 1px solid rgb(255 255 255 / 10%);
 }
 
 .cart-item-link {
@@ -227,40 +262,49 @@
 
   img {
     display: block;
+
     margin-right: 23px;
   }
 
   p {
     max-width: 150px;
     margin: 0;
+
+    color: $white;
+
     font-size: 16px;
     line-height: 20px;
-    color: $white;
   }
 }
 
 .summary {
   display: flex;
-  align-items: center;
   justify-content: space-between;
+  align-items: center;
+
   min-height: 44px;
   padding: 0 20px;
+
   background-color: $nero;
 
   p {
     margin: 0;
+
+    color: $white;
+
     font-size: 16px;
     line-height: 20px;
-    color: $white;
   }
 }
 
 .cart-link-more {
-  padding: 14.5px;
   margin: 20px;
-  text-decoration: none;
-  color: $black;
+  padding: 14.5px;
+
   background-color: $white;
+  color: $black;
+
+  text-decoration: none;
 
   &:hover {
     background-color: $yellow-light;
@@ -271,8 +315,8 @@
   }
 
   &:active {
-    outline: none;
     background-color: $yellow-light;
+    outline: none;
 
     span {
       opacity: 0.3;
@@ -298,14 +342,15 @@
 
 .header-navigation-list {
   display: flex;
-  align-items: center;
   flex-wrap: wrap;
   gap: 20px 45px;
+  align-items: center;
 
   li {
     .heading-2 {
       position: relative;
       z-index: 40;
+
       color: $black;
     }
   }
@@ -318,25 +363,31 @@
 
 .catalog-list {
   position: relative;
+
   margin-right: auto;
 }
 
 .catalog-heading {
-  display: block;
   position: relative;
+  display: block;
+
   padding: 15px 67px 15px 0;
+
   text-decoration: none;
 
   &::after {
     content: '';
     position: absolute;
-    width: 50px;
-    height: 51px;
     top: -1px;
     right: 0;
-    opacity: 0.3;
-    background-image: url(../img/icons/list-opened.svg);
+
+    width: 50px;
+    height: 51px;
+
+    background-image: url("../img/icons/list-opened.svg");
     background-repeat: no-repeat;
+
+    opacity: 0.3;
   }
 
   &:hover {
@@ -362,13 +413,36 @@
   &::after {
     content: '';
     position: absolute;
-    width: 50px;
-    height: 51px;
     top: -1px;
     right: 0;
-    opacity: 0.3;
-    background-image: url(../img/icons/list-closed.svg);
+
+    width: 50px;
+    height: 51px;
+
+    background-image: url("../img/icons/list-closed.svg");
     background-repeat: no-repeat;
+
+    opacity: 0.3;
+  }
+}
+
+.catalog-container {
+  position: absolute;
+  top: 33px;
+  left: -60px;
+  z-index: 30;
+  display: none;
+
+  width: 1160px;
+  padding: 32px 60px 56px;
+
+  background-color: $yellow;
+
+  a {
+    color: $black;
+
+    font-size: 16px;
+    line-height: 18px;
   }
 }
 
@@ -376,23 +450,6 @@
 .catalog-heading:hover+ {
   .catalog-container {
     display: flex;
-  }
-}
-
-.catalog-container {
-  display: none;
-  position: absolute;
-  top: 33px;
-  left: -60px;
-  z-index: 30;
-  width: 1160px;
-  padding: 32px 60px 56px;
-  background-color: $yellow;
-
-  a {
-    font-size: 16px;
-    line-height: 18px;
-    color: $black;
   }
 }
 
@@ -411,14 +468,16 @@
 
 .navigation-link-active {
   text-decoration: underline solid $black;
+
   text-decoration-thickness: 2px;
-  text-underline-position: under;
   text-underline-offset: 4px;
+  text-underline-position: under;
 }
 
 .catalog-link-active {
   text-decoration: underline solid $black;
+
   text-decoration-thickness: 1px;
-  text-underline-position: under;
   text-underline-offset: 2px;
+  text-underline-position: under;
 }
