--- a/src/scss/components/_monopods.scss
+++ b/src/scss/components/_monopods.scss
@@ -202,13 +202,11 @@
     border: none;
 
     background-color: transparent;
-    color: inherit;
+    color: rgb(0 0 0 / 30%);
 
     font-size: 14px;
     font-family: inherit;
     line-height: 18px;
-
-    opacity: 0.3;
 
     appearance: textfield;
 
@@ -376,13 +374,23 @@
     border: none;
 
     background-color: transparent;
-    background-image: url("../img/icons/button-sort.svg");
-    background-position: center;
-    background-repeat: no-repeat;
 
-    opacity: 0.2;
     cursor: pointer;
     user-select: none;
+
+    .sort-button {
+      display: block;
+
+      width: 11px;
+      height: 10px;
+
+      background-color: transparent;
+      background-image: url("../img/icons/button-sort.svg");
+      background-position: center;
+      background-repeat: no-repeat;
+
+      opacity: 0.2;
+    }
 
     &:hover {
       opacity: 0.5;
@@ -662,13 +670,13 @@
     background-color: $gray;
     outline: none;
 
-    span {
+    .pagination-button-text {
       opacity: 0.3;
     }
   }
 
   &:disabled {
-    span {
+    .pagination-button-text {
       opacity: 0.3;
     }
 
@@ -692,41 +700,45 @@
   padding: 0;
 
   list-style: none;
+}
 
-  a {
-    width: 40px;
-    height: 40px;
+.pagination-item {
+  font-size: 16px;
+  line-height: 20px;
+}
 
-    color: $dark;
+.pagination-item-link {
+  width: 40px;
+  height: 40px;
 
-    font-size: 16px;
-    line-height: 20px;
-    text-decoration: none;
+  color: $dark;
 
+  font-size: 16px;
+  line-height: 20px;
+  text-decoration: none;
+
+  span {
     opacity: 0.3;
-
-    &:hover {
-      opacity: 1;
-    }
-
-    &:focus {
-      @include focus-default;
-    }
-
-    &:active {
-      outline: none;
-
-      opacity: 0.1;
-    }
   }
 
-  .pagination-item {
-    font-size: 16px;
-    line-height: 20px;
+  &:hover {
+    opacity: 1;
+  }
+
+  &:focus {
+    @include focus-default;
+  }
+
+  &:active {
+    outline: none;
+
+    opacity: 0.1;
   }
 
   .page-active {
-    opacity: 0.6;
+    span {
+      opacity: 0.6;
+    }
 
     &:hover {
       opacity: 0.6;
